tests/success/typechecking/Propagation.vix
type List a where
  Nil : List a
  Cons : a -> Ptr (List a) -> List a

type List2 a where
  Nil : List2 a
  Cons : a -> Ptr (List2 a) -> List2 a

the : (A : type) -> A -> A
the _ a = a

test = the (_ -> _ -> List _) Cons 1 (Ptr Nil)

test2 = the (List2 int) (Cons 1 (Ptr Nil))

test3 : List2 int
test3 = Cons 1 (Ptr Nil)
