tests/type-error/CircularGlobal-Mutual.vix
type List a = Nil | Cons a (Ptr (List a))

oneTwos = Ptr (Cons 1 twoOnes)
twoOnes = Ptr (Cons 2 oneTwos)

test = case oneTwos of
  Ptr (Cons 1 (Ptr (Cons 2 (Ptr (Cons 1 (Ptr (Cons 2 _))))))) -> 111
  _ -> 222
